# poligono

./: CMakeLists.txt  README.md  Vertex.h  main.cpp  poligono.cpp  poligono.h  shader.h  shape.h  triangle.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
